--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@ body {
   height: 2592px;
 }
 
-.a,
 .a {
   /* NO UNDERLINE IN LINKS */
   text-decoration: none;
@@ -63,31 +62,20 @@ body {
   padding-left: 332px;
 }
 
-.menu .a {
-  color: var(--NAVY-BLUE);
-}
-
-.menu .hover-line {
-  width: 100px;
-  height: 10px;
-  background-color: blue;
-}
-
-.menu .a:hover::after {
-  /* content: "   "; */
-  color: blue;
-  height: 100px;
-  width: 100px;
+.section-topline .active::after {
+  content: '';
+  display: block;
+  height: 4px;
+  width: 100%;
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  position: relative;
+  top: 23px;
 }
 
 .contacts .a {
   color: var(--SLATE);
 }
-
-/* .section-topline .a:hover,
-.section-topline .a:focus {
-  color: rgba(77, 90, 229, 1);
-} */
 
 /* topline flex  */
 
@@ -147,7 +135,7 @@ body {
   gap: 10px;
   justify-content: center;
 } */
-.divbutton {
+.button-container {
   width: 496px;
   display: inline-flex;
   padding: 16px 32px;
@@ -155,17 +143,45 @@ body {
   justify-content: center;
 }
 
-.hero-image button {
-  display: inline-flex;
-  padding: 16px 32px;
-  align-items: flex-start;
-  gap: 10px;
+.hero-image .button {
+  /* display: inline-flex; */
+  /* align-items: flex-start; */
+  /* gap: 10px; */
 
+  padding: 16px 32px;
   border-radius: 4px;
   background: var(--IRIS, #4d5ae5);
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: var(--WHITE, #fff);
 }
+
+
+
+.hero-image .modal {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility:hidden;
+}
+
+.is-hidden {
+  visibility: hidden;
+}
+
+.hero-image .data-modal {
+  background-color: white;
+  width: 480px;
+  height: 584px;
+  /* visibility: visible; */
+}
+
+
 
 /* .hero-imagess span {
 
@@ -177,8 +193,8 @@ body {
   letter-spacing: 0.64px;
 } */
 
-.hero-image button:focus,
-.hero-image button:hover {
+.hero-image .button:focus,
+.hero-image .button:hover {
   cursor: pointer;
   border-radius: 4px;
   background: var(--CLOUD, #f4f4fd);
