--- a/css/styles.css
+++ b/css/styles.css
@@ -155,33 +155,35 @@ body {
   color: var(--WHITE, #fff);
 }
 
-
-
-.hero-image .modal {
+.hero-image .data-modal {
   position: absolute;
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
+  width: 100%;
   background: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  visibility:hidden;
+  /* visibility: visible; */
+}
+
+.hero-image .btn-close {
+  background-color: white;
+  width: 480px;
+  height: 584px;
+  position: relative;
+}
+.btn-right {
+  position: absolute;
+  top: 0;
+  right: 0;
 }
 
 .is-hidden {
   visibility: hidden;
 }
-
-.hero-image .data-modal {
-  background-color: white;
-  width: 480px;
-  height: 584px;
-  /* visibility: visible; */
-}
-
-
 
 /* .hero-imagess span {
 
@@ -468,3 +470,37 @@ body {
 /* index html end*/
 /* index html end*/
 /* index html end*/
+
+/* PORTFOLIO HTML */
+
+.portfolio-services {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.portfolio-services .list {
+  width: 1128px;
+  height: 428px;
+  display: flex;
+  gap: 24px;
+}
+
+.portfolio-services .projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 360px;
+  height: 420px;
+  gap: 32px;
+  border: 1px solid var(--CORNFLOWER, #e7e9fc);
+  background: var(--WHITE, #fff);
+}
+
+.portfolio-services .service-description {
+  display: flex;
+  align-self: stretch;
+  padding: 0px 16px;
+  flex-direction: column;
+  gap: 8px;
+}
