--- a/css/styles.css
+++ b/css/styles.css
@@ -91,13 +91,13 @@ body {
   gap: 40px;
 }
 
- .toplinebg {
-  width: 1440px;  
-  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc); 
+.toplinebg {
+  width: 1440px;
+  border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
   background: var(--WHITE, #fff);
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
-    0px 2px 1px 0px rgba(46, 47, 66, 0.08); 
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 /* HEADER SECTION END*/
 
@@ -174,7 +174,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* visibility: visible; */
+  visibility: hidden;
 }
 
 .hero-image .btn-close {
@@ -482,22 +482,22 @@ body {
 /* PORTFOLIO HTML */
 
 .portfolio-filters .btn-style {
-  color: var(--IRIS, #4D5AE5);
+  color: var(--IRIS, #4d5ae5);
   border-radius: 4px;
   border: 1px solid var(--CORNFLOWER, #e7e9fc);
   background: var(--CLOUD, #f4f4fd);
 
   /* Button Text */
 
-font-size: 16px;
-font-style: normal;
-font-weight: 500;
-line-height: 24px; /* 150% */
-letter-spacing: 0.64px;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+  letter-spacing: 0.64px;
 }
 
 .portfolio-filters .btn-style:hover {
-color: var(--WHITE, #FFF);
+  color: var(--WHITE, #fff);
 
   border-radius: 4px;
   background: var(--OCEAN, #404bbf);
@@ -552,4 +552,41 @@ color: var(--WHITE, #FFF);
   padding: 0px 16px;
   flex-direction: column;
   gap: 8px;
+}
+
+.box {
+  width: 360px;
+  height: 460px;
+  background-color: #2e2f42;
+  opacity: 0;
+  /* transition: background-color 1s ease; */
+}
+
+.img1 {
+  position: relative;
+  /* transition: background-color 4s ease; */
+}
+
+.position {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+
+  /* height: 500px; */
+}
+
+.position:hover {
+  height: 1px;
+  opacity: 1;
+  animation-name: resize;
+  animation-duration: 1s;
+}
+
+@keyframes resize {
+  from {
+    height: 1px;
+  }
+  to {
+    height: 420px;
+  }
 }
