--- a/css/styles.css
+++ b/css/styles.css
@@ -165,16 +165,14 @@ body {
 
 .hero-image .data-modal {
   position: absolute;
-  /* width: 100%; */
+  width: 1440px;
   height: 100%;
-  width: 100%;
   background: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* visibility: hidden; */
 }
 
 .hero-image .btn-close {
