--- a/css/styles.css
+++ b/css/styles.css
@@ -164,9 +164,9 @@ body {
 }
 
 .hero-image .data-modal {
-  position: absolute;
   width: 1440px;
   height: 100%;
+  position: absolute;
   background: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
@@ -553,38 +553,31 @@ body {
 }
 
 .box {
-  width: 360px;
-  height: 460px;
-  background-color: #2e2f42;
-  opacity: 0;
-  /* transition: background-color 1s ease; */
-}
-
-.img1 {
   position: relative;
+  width: 360px;
+  height: 300px;
+  overflow: hidden;
   /* transition: background-color 4s ease; */
 }
 
-.position {
+.overlay {
   position: absolute;
   top: 0px;
   left: 0px;
-
-  /* height: 500px; */
+  width: 100%;
+  height: 100%;
+  background-color: var(--IRIS);
+  transform: translatey(100%);
+  transition: transform 250ms ease-in-out;
 }
 
-.position:hover {
-  height: 1px;
-  opacity: 1;
-  animation-name: resize;
-  animation-duration: 1s;
+.overlay-p {
+  width: 296px;
+  margin: 0px 32px;
+  margin-top: 40px;
+  color: var(--CLOUD);
 }
 
-@keyframes resize {
-  from {
-    height: 1px;
-  }
-  to {
-    height: 420px;
-  }
+.box:hover .overlay {
+  transform: translatey(0);
 }
