--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,7 @@ body {
 .section-topline {
   display: inline-flex;
   height: 72px;
-  width: 1440px;
+  width: 100%;
   justify-content: center;
   align-items: center;
 }
@@ -94,7 +94,6 @@ body {
 }
 
 .toplinebg {
-  width: 1440px;
   border-bottom: 1px solid var(--CORNFLOWER, #e7e9fc);
   background: var(--WHITE, #fff);
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
